Clean ntb: remove drafts, runtime noise
Чистка ai_society_simulations.ipynb:
– удалены временные ячейки и сообщения об ошибках
– убраны "одноразовые" черновые эксперименты
– оставлены только воспроизводимые блоки анализа и симуляции
– комментарии на русском сохранены как авторские пояснения к модели

--- a/notebooks/analysis/ai_society_simulations.ipynb
+++ b/notebooks/analysis/ai_society_simulations.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP1nW6Lo25+coCnReYyctbp",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alekol1970/ai_society_simulations/blob/main/notebooks/analysis/ai_society_simulations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -327,22 +315,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "k5JOtwwFAuH9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
         "years = np.arange(1, 11)\n",
         "\n",
-        "# Считаем, что у вас уже есть словарь countries с HR_series и CG_series\n",
+        "# Опираемся на существующий словарь countries с HR_series и CG_series\n",
         "plt.rcParams.update({'font.size': 11})\n",
         "\n",
         "# --- HR ступеньками ---\n",
@@ -472,8 +451,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "collapsed": true
+        }
       },
       "execution_count": null,
       "outputs": [
